--- a/css/index_style.css
+++ b/css/index_style.css
@@ -8,7 +8,9 @@
 }
 
 #cy {
-  width: 300px;
-  height: 300px;
-  display: block;
+	min-width: 600px;
+	height: 400px;
+	margin-right: 100px;
+	display: block;
+	border: 3px solid #73AD21;
 }
