--- a/css/index_style.css
+++ b/css/index_style.css
@@ -14,3 +14,12 @@
 	display: block;
 	border: 3px solid #73AD21;
 }
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
