--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,12 +1,3 @@
-#footer{
-	position: absolute;
-	bottom: 0;
-}
-
-#functions{
-	float: right;
-}
-
 #cy {
 	min-width: 600px;
 	height: 400px;
@@ -15,11 +6,20 @@
 	border: 3px solid #73AD21;
 }
 
+.functions button{
+	margin: 5px;
+}
+
+.footer {
+	position: absolute;
+	bottom: 0px;
+}
+
 .unselectable {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
