--- a/css/index_style.css
+++ b/css/index_style.css
@@ -2,6 +2,7 @@
 	min-width: 600px;
 	height: 400px;
 	margin-right: 100px;
+	margin-bottom: 20px;
 	display: block;
 	border: 3px solid #73AD21;
 }
@@ -11,8 +12,11 @@
 }
 
 .footer {
-	position: absolute;
-	bottom: 0px;
+	position: fixed;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin-bottom: 0px;
 }
 
 .unselectable {
