--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,8 +1,24 @@
+html{
+	width:100%;
+	height: 100%;
+}
+
+body{
+	position: relative; 
+	height : 90%;
+	width: 98%
+}
+
 #cy {
+	position: absolute;
+	top: 90px;
+	bottom: 0;
+	right: 0;
+	left: 0;
 	min-width: 600px;
-	height: 400px;
+	min-height: 400px;
 	margin-right: 100px;
-	margin-bottom: 40px;
+	margin-bottom: 30px;
 	display: block;
 	border: 3px solid #73AD21;
 }
@@ -12,6 +28,7 @@
 }
 
 .footer {
+	text-align: center;
 	position: fixed;
     bottom: 0px;
     left: 0px;
